--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,18 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>World population</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./style/style.css">
+    <meta charset="utf-8">
 </head>
 <body>
 <div class="wrapper">
-    <h1>World population over time</h1>
-    <h2>Number of people (in millions) living on earth, the last 500 years</h2>
-
-    <canvas id="myChart" width="1600" height="900"></canvas>
+    <canvas id="myChart" style="width:1000px !important; height: 600px !important;"></canvas>
 </div>
 
-<script src="./js/script.js"></script>
+
+<script th:inline="javascript">
+    // Our labels along the x-axis
+    // var years = [1500, 1600, 1700, 1750, 1800, 1850, 1900, 1950, 1999, 2050];
+    var date = [[${courseDate}]];
+    var EUR = [[${courseEUR}]];
+    var USD = [[${courseUSD}]];
+    var RUB = [[${courseRUB}]];
+
+    var ctx = document.getElementById("myChart");
+    // ctx.width(800);
+    ctx.height = 100;
+    var myChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+            labels: date,
+            options: {
+                maintainAspectRatio: false,
+                responsive: true
+            },
+            datasets: [
+                {
+                    data: EUR,
+                    label: "EUR",
+                    borderColor: "#3e95cd",
+                    fill: false
+                },
+                {
+                    data: USD,
+                    label: "USD",
+                    borderColor: "#8e5ea2",
+                    fill: false
+                },
+                {
+                    data: RUB,
+                    label: "RUB",
+                    borderColor: "#3cba9f",
+                    fill: false
+                }
+            ]
+        }
+    });
+</script>
 </body>
 </html>
