--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -79,7 +79,7 @@
                 {
                     data: RUB,
                     label: "RUB",
-                    borderColor: "#3cba9f",
+                    borderColor: "#ba3312",
                     fill: false
                 }
             ]
