--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -5,16 +5,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
 <div class="table-responsive">
-
+    <div th:switch="${role}">
+        <a th:case="'anonymousUser'" th:href="login">Login</a>
+        <a th:case="*" th:href="main_page">Go to the main page</a>
+    </div>
+<!--    <a href="#" th:text="${role}"></a>-->
     <table class="table table-striped table-bordered">
         <tr>
             <th class="text-left" scope="col" style="width: 16.66%"></th>
