--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,55 +7,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Exchanger</title>
 </head>
 <body class="dev">
-    <div class="top">
-    
-        <div class="backimage"></div><nav class="navbar navbar-expand-lg navbar-light ">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-              
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                      <a class="nav-link" th:href="@{/}">Starter page<span class="sr-only">(current)</span></a>
-                    
-                  </ul>
+<div class="top">
+
+    <div class="backimage"></div>
+    <nav class="navbar navbar-expand-lg navbar-light ">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/}">Starter page<span class="sr-only">(current)</span></a>
+
+            </ul>
+        </div>
+    </nav>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Please sign in</h3>
                 </div>
-              </nav>
+
+                <div class="panel-body">
+                    <form accept-charset="UTF-8" role="form" method="POST" th:action="@{/login}" id="loginForm">
+                        <fieldset>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="Username" type="text" name="username" id="username">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="Password" type="password" name="password"
+                                       id="password">
+                            </div>
+                            <input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-   
-            <div class="row">
-                <div class="column">
-                    <div class="jumbotron">
-                    </br>
-					<h1>Login</h1>
-    
-					<p>New here? Click to
-					<em class = "link2"><a th:href="@{/register}"> register</a></em>.</p>
-    
-					<!-- tag::thAction[] -->
-					<form method="POST" th:action="@{/login}" id="loginForm">
-					<!-- end::thAction[] -->
-					<label for="username">Username: </label>
-					<input type="text" name="username" id="username" /><br/>
-      
-					<label for="password">Password: </label>
-					<input type="password" name="password" id="password" /><br/>
-      
-					<input type="submit" value="Login"/>
-					</form>
-					</div>
-                           
-				</div>
-			</div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
+</div>
 
 
 </body>
