--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -51,23 +51,34 @@
         </div>
 
     </div><!-- /.container -->
-
-    <script>
-        $(document).ready(function () {
-            setInterval(function () {
-                var hours = new Date().getHours();
-                $(".hours").html((hours < 10 ? "0" : "") + hours);
-            }, 1000);
-            setInterval(function () {
-                var minutes = new Date().getMinutes();
-                $(".min").html((minutes < 10 ? "0" : "") + minutes);
-            }, 1000);
-            setInterval(function () {
-                var seconds = new Date().getSeconds();
-                $(".sec").html((seconds < 10 ? "0" : "") + seconds);
-            }, 1000);
-        });
-    </script>
-
-    <body>
+    <div>
+        <div th:switch="${role}">
+            <div th:case="'anonymousUser'">
+                <a th:href="login">Login</a>
+                <a th:href="register">New? Register now</a>
+            </div>
+            <div th:case="*">
+                <a th:href="user_page">Personal area</a>
+            </div>
+            <a th:href="exchange_rates">Show exchanger rates</a>
+        </div>
+    </div>
+</div>
+<script>
+    $(document).ready(function () {
+        setInterval(function () {
+            var hours = new Date().getHours();
+            $(".hours").html((hours < 10 ? "0" : "") + hours);
+        }, 1000);
+        setInterval(function () {
+            var minutes = new Date().getMinutes();
+            $(".min").html((minutes < 10 ? "0" : "") + minutes);
+        }, 1000);
+        setInterval(function () {
+            var seconds = new Date().getSeconds();
+            $(".sec").html((seconds < 10 ? "0" : "") + seconds);
+        }, 1000);
+    });
+</script>
+</body>
 </html>
