added app logic

--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -58,6 +58,7 @@
                 <a th:href="register">New? Register now</a>
             </div>
             <div th:case="*">
+                <a th:href="logout">Logout</a>
                 <a th:href="user_page">Personal area</a>
             </div>
             <a th:href="exchange_rates">Show exchanger rates</a>
