--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -15,20 +15,27 @@
 <body>
 <div class="table-responsive">
     <div th:switch="${role}">
-        <a th:href="main_page">Go to the main page</a>
-        <a th:case="'anonymousUser'" th:href="login">Login</a>
-        <a th:case="*" th:href="user_page">Go to the user page</a>
+        <div th:case="'anonymousUser'">
+            <a th:href="main_page">Go to the main page</a>
+            <a th:href="login">Login</a>
+            <a th:href="register">Registration</a>
+        </div>
+        <div th:case="*" th:href="user_page">
+            <a th:href="main_page">Go to the main page</a>
+            <a th:href="user_page">Go to the user page</a>
+            <a th:href="logout">Logout</a>
+        </div>
     </div>
 <!--    <a href="#" th:text="${role}"></a>-->
     <table class="table table-striped table-bordered">
         <tr>
-            <th class="text-left" scope="col" style="width: 16.66%"></th>
-            <th class="text-left" style="width: 16.66%">sell USD</th>
-            <th class="text-left" style="width: 16.66%">buy USD</th>
-            <th class="text-left" style="width: 16.66%">sell EUR</th>
-            <th class="text-left" style="width: 16.66%">buy EUR</th>
-            <th class="text-left" style="width: 16.66%">sell RUB</th>
-            <th class="text-left" style="width: 16.66%">buy RUB</th>
+            <th class="text-left" scope="col" style="width: 14.3%"></th>
+            <th class="text-left" style="width: 14.3%">sell USD</th>
+            <th class="text-left" style="width: 14.3%">buy USD</th>
+            <th class="text-left" style="width: 14.3%">sell EUR</th>
+            <th class="text-left" style="width: 14.3%">buy EUR</th>
+            <th class="text-left" style="width: 14.3%">sell RUB</th>
+            <th class="text-left" style="width: 14.3%">buy RUB</th>
         </tr>
         <th:block th:each="map : ${coursesAndBanks}">
             <th:block th:each="element : ${map}">
