--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -80,13 +80,13 @@
         <div class="col-md-4 col-md-offset-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Please sign in</h3>
+                    <h3 class="panel-title">Registration form</h3>
                 </div>
                 <div class="panel-body">
                     <form accept-charset="UTF-8" role="form" method="POST" th:action="@{/register}" id="registerForm">
                         <fieldset>
                             <div class="form-group">
-                                <input class="form-control" type="text" name="name" id="username">
+                                <input class="form-control" placeholder="Username" type="text" name="name" id="username">
                             </div>
                             <div class="form-group">
                                 <input class="form-control" placeholder="Password" type="password" name="password"
