--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{main_page}">Starter page<span class="sr-only">(current)</span></a>
+                    <a th:href="@{main_page}" ><span style="font-size: 10px;">Starter page</span><span class="sr-only">(current)</span></a>
 
             </ul>
         </div>
