--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -29,24 +29,102 @@
 <!--    <a href="#" th:text="${role}"></a>-->
     <table class="table table-striped table-bordered">
         <tr>
-            <th class="text-left" scope="col" style="width: 14.3%"></th>
-            <th class="text-left" style="width: 14.3%">sell USD</th>
-            <th class="text-left" style="width: 14.3%">buy USD</th>
-            <th class="text-left" style="width: 14.3%">sell EUR</th>
-            <th class="text-left" style="width: 14.3%">buy EUR</th>
-            <th class="text-left" style="width: 14.3%">sell RUB</th>
-            <th class="text-left" style="width: 14.3%">buy RUB</th>
+            <th class="text-left" scope="col" style="width: 10.3%"></th>
+            <th class="text-left" style="width: 14.3%">&nbsp;buy USD</th>
+            <th class="text-left" style="width: 14.3%">&nbsp;sell USD</th>
+            <th class="text-left" style="width: 14.3%">&nbsp;buy EUR</th>
+            <th class="text-left" style="width: 14.3%">&nbsp;sell EUR</th>
+            <th class="text-left" style="width: 14.3%">&nbsp;buy RUB</th>
+            <th class="text-left" style="width: 14.3%">&nbsp;sell RUB</th>
         </tr>
         <th:block th:each="map : ${coursesAndBanks}">
             <th:block th:each="element : ${map}">
                 <tr>
-                    <th th:text="${element.key}" class="text-left" scope="col" style="width: 16.66%"></th>
-                    <td class="text-left" style="width: 16.66%" th:text="${element.value.getBuyUSD()}"></td>
-                    <td class="text-left" style="width: 16.66%" th:text="${element.value.getSellUSD()}"></td>
-                    <td class="text-left" style="width: 16.66%" th:text="${element.value.getBuyEUR()}"></td>
-                    <td class="text-left" style="width: 16.66%" th:text="${element.value.getSellEUR()}"></td>
-                    <td class="text-left" style="width: 16.66%" th:text="${element.value.getBuyRUB()}"></td>
-                    <td class="text-left" style="width: 16.66%" th:text="${element.value.getSellRUB()}"></td>
+                    <th th:text="${element.key}" class="text-left" scope="col" style="width: 10.3%"></th>
+                    <th:block th:if="${1 == element.value.getBankId()}">
+                        <td class="text-left" style="width: 14.3%; background-color:#66ccff" th:text="${element.value.getBuyUSD()}"></td>
+                        <td class="text-left" style="width: 14.3%; background-color:#66ccff" th:text="${element.value.getSellUSD()}"></td>
+                        <td class="text-left" style="width: 14.3%; background-color:#66ccff" th:text="${element.value.getBuyEUR()}"></td>
+                        <td class="text-left" style="width: 14.3%; background-color:#66ccff" th:text="${element.value.getSellEUR()}"></td>
+                        <td class="text-left" style="width: 14.3%; background-color:#66ccff" th:text="${element.value.getBuyRUB()}"></td>
+                        <td class="text-left" style="width: 14.3%; background-color:#66ccff" th:text="${element.value.getSellRUB()}"></td>
+
+                    </th:block>
+                    <th:block th:if="${1 != element.value.getBankId()}">
+
+                        <th:block th:if="${minBuyUSD == element.value.getBuyUSD()}">
+                            <td class="text-left" style="width: 14.3%; background-color:#ccff66" th:text="${element.value.getBuyUSD()}"></td>
+                        </th:block>
+                        <th:block th:if="${minBuyUSD != element.value.getBuyUSD()}">
+                            <td class="text-left" style="width: 14.3%" th:text="${element.value.getBuyUSD()}"></td>
+                        </th:block>
+                        <th:block th:if="${maxSellUSD == element.value.getSellUSD()}">
+                            <td class="text-left" style="width: 14.3%; background-color:#ccff66" th:text="${element.value.getSellUSD()}"></td>
+                        </th:block>
+                        <th:block th:if="${maxSellUSD != element.value.getSellUSD()}">
+                            <td class="text-left" style="width: 14.3%" th:text="${element.value.getSellUSD()}"></td>
+                        </th:block>
+                        <th:block th:if="${minBuyEUR == element.value.getBuyEUR()}">
+                            <td class="text-left" style="width: 14.3%; background-color:#ccff66" th:text="${element.value.getBuyEUR()}"></td>
+                        </th:block>
+                        <th:block th:if="${minBuyEUR != element.value.getBuyEUR()}">
+                            <td class="text-left" style="width: 14.3%" th:text="${element.value.getBuyEUR()}"></td>
+                        </th:block>
+                        <th:block th:if="${maxSellEUR == element.value.getSellEUR()}">
+                            <td class="text-left" style="width: 14.3%; background-color:#ccff66" th:text="${element.value.getSellEUR()}"></td>
+                        </th:block>
+                        <th:block th:if="${maxSellEUR != element.value.getSellEUR()}">
+                            <td class="text-left" style="width: 14.3%" th:text="${element.value.getSellEUR()}"></td>
+                        </th:block>
+                        <th:block th:if="${minBuyRUB == element.value.getBuyRUB()}">
+                            <td class="text-left" style="width: 14.3%; background-color:#ccff66" th:text="${element.value.getBuyRUB()}"></td>
+                        </th:block>
+                        <th:block th:if="${minBuyRUB != element.value.getBuyRUB()}">
+                            <td class="text-left" style="width: 14.3%" th:text="${element.value.getBuyRUB()}"></td>
+                        </th:block>
+                        <th:block th:if="${maxSellRUB == element.value.getSellRUB()}">
+                            <td class="text-left" style="width: 14.3%; background-color:#ccff66" th:text="${element.value.getSellRUB()}"></td>
+                        </th:block>
+                        <th:block th:if="${maxSellRUB != element.value.getSellRUB()}">
+                            <td class="text-left" style="width: 14.3%" th:text="${element.value.getSellRUB()}"></td>
+                        </th:block>
+                    </th:block>
+<!--                    <th:block th:if="${minBuyUSD == element.value.getBuyUSD()}">-->
+<!--                        <td class="text-left" style="width: 14.3%; background-color:#ccff66" th:text="${element.value.getBuyUSD()}"></td>-->
+<!--                    </th:block>-->
+<!--                    <th:block th:if="${minBuyUSD != element.value.getBuyUSD()}">-->
+<!--                        <td class="text-left" style="width: 14.3%" th:text="${element.value.getBuyUSD()}"></td>-->
+<!--                    </th:block>-->
+<!--                    <th:block th:if="${maxSellUSD == element.value.getSellUSD()}">-->
+<!--                        <td class="text-left" style="width: 14.3%; background-color:#ccff66" th:text="${element.value.getSellUSD()}"></td>-->
+<!--                    </th:block>-->
+<!--                    <th:block th:if="${maxSellUSD != element.value.getSellUSD()}">-->
+<!--                        <td class="text-left" style="width: 14.3%" th:text="${element.value.getSellUSD()}"></td>-->
+<!--                    </th:block>-->
+<!--                    <th:block th:if="${minBuyEUR == element.value.getBuyEUR()}">-->
+<!--                        <td class="text-left" style="width: 14.3%; background-color:#ccff66" th:text="${element.value.getBuyEUR()}"></td>-->
+<!--                    </th:block>-->
+<!--                    <th:block th:if="${minBuyEUR != element.value.getBuyEUR()}">-->
+<!--                        <td class="text-left" style="width: 14.3%" th:text="${element.value.getBuyEUR()}"></td>-->
+<!--                    </th:block>-->
+<!--                    <th:block th:if="${maxSellEUR == element.value.getSellEUR()}">-->
+<!--                        <td class="text-left" style="width: 14.3%; background-color:#ccff66" th:text="${element.value.getSellEUR()}"></td>-->
+<!--                    </th:block>-->
+<!--                    <th:block th:if="${maxSellEUR != element.value.getSellEUR()}">-->
+<!--                        <td class="text-left" style="width: 14.3%" th:text="${element.value.getSellEUR()}"></td>-->
+<!--                    </th:block>-->
+<!--                    <th:block th:if="${minBuyRUB == element.value.getBuyRUB()}">-->
+<!--                        <td class="text-left" style="width: 14.3%; background-color:#ccff66" th:text="${element.value.getBuyRUB()}"></td>-->
+<!--                    </th:block>-->
+<!--                    <th:block th:if="${minBuyRUB != element.value.getBuyRUB()}">-->
+<!--                        <td class="text-left" style="width: 14.3%" th:text="${element.value.getBuyRUB()}"></td>-->
+<!--                    </th:block>-->
+<!--                    <th:block th:if="${maxSellRUB == element.value.getSellRUB()}">-->
+<!--                        <td class="text-left" style="width: 14.3%; background-color:#ccff66" th:text="${element.value.getSellRUB()}"></td>-->
+<!--                    </th:block>-->
+<!--                    <th:block th:if="${maxSellRUB != element.value.getSellRUB()}">-->
+<!--                        <td class="text-left" style="width: 14.3%" th:text="${element.value.getSellRUB()}"></td>-->
+<!--                    </th:block>-->
                 </tr>
             </th:block>
         </th:block>
