--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,8 +28,12 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a th:href="@{main_page}" ><span style="font-size: 10px;">Starter page</span><span class="sr-only">(current)</span></a>
-
+                </li>
+                <li>
+                    &emsp;<a th:href="@{/register}" ><span style="font-size: 10px;">Registration</span><span class="sr-only">(current)</span></a>
+                </li>
             </ul>
+
         </div>
     </nav>
 </div>
